rewrite with requests but unable to test because it never worked with my agenda

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,7 @@ dev_dependencies:
   test: ^1.20.1
 dependencies: 
   dartz: ^0.10.1
-  dio: ^4.0.4
+  requests: ^4.7.0
   icalendar_parser: ^1.0.1
   dartus: 
    git: git@github.com:hatch01/dartus-tomuss-client.git
